--- a/_posts/2019-07-07-css相关 面试问题.md
+++ b/_posts/2019-07-07-css相关 面试问题.md
@@ -180,8 +180,6 @@ html,body{
 
 #### 6.子盒子在父盒子中水平垂直居中有几种方法？（定位、弹性盒子）
 
-垂直居中 看第24题
-
 水平垂直居中：
 
 ##### 1.定位position+margin外边距（需要知道子盒子的宽高）
@@ -230,7 +228,7 @@ align-items: center;
 
 ##### 4.margin：auto（不需要知道宽高）
 
-设置margin自动适应,然后设置定位的上下左右都为0,就如四边均衡受力从而实现盒子的居中；
+设置margin自动适应，然后设置定位的上下左右都为0，就如四边均衡受力从而实现盒子的居中；
 
 ```css
  position: absolute;        
@@ -300,6 +298,4 @@ Position有四个属性值，分别是static 、fixed、 relative 、absolute；
 ​	**CSS3有兼容性问题，而JS大多时候没有兼容性问题。**
 
 
-
-#### 
 
