--- a/_posts/2019-07-07-es6相关 面试问题.md
+++ b/_posts/2019-07-07-es6相关 面试问题.md
@@ -277,3 +277,59 @@ const o3 = { c: 3 };
 const obj = Object.assign(o1, o2, o3);// { a: 1, b: 2, c: 3 }
 ```
 
+
+
+#### 7.箭头函数和一般函数有什么区别？
+
+定义箭头函在数语法上要比普通函数简洁得多。箭头函数省去了`function`关键字，采用箭头`=>`来定义函数。
+
+**基本语法：关于箭头函数的参数：**
+
+① 如果箭头函数**没有参数**，直接写一个**空括号**即可。
+
+② 如果箭头函数的**参数只有一个**，也可以**省去包裹参数的括号**。
+
+③ 如果箭头函数有多个参数，将参数依次用逗号(,)分隔，包裹在括号中即可。
+
+**基本语法：关于箭头函数的函数体：**
+
+① 如果箭头函数的函数体只有一句代码，就是简单返回某个变量或者返回一个简单的JS表达式，可以省去函数体的大括号{ }。
+
+② 如果箭头函数的函数体只有一句代码，就是返回一个对象，用小括号包裹要返回的对象，不报错
+
+```javascript
+let getTempItem = id => ({ id: id, name: "Temp" });
+```
+
+③ 如果箭头函数的函数体只有一条语句并且不需要返回值（最常见是调用一个函数），可以给这条语句前面加一个`void`关键字
+
+```javascript
+let fn = () => void doesNotReturn();
+//用来简化回调函数：
+[1,2,3].map(function (x) {return x * x;});// 正常函数写法
+[1,2,3].map(x => x * x);// 箭头函数写法
+var result = [2, 5, 1, 4, 3].sort(function (a, b) {  return a - b;});// 正常函数写法
+var result = [2, 5, 1, 4, 3].sort((a, b) => a - b);// 箭头函数写法
+```
+
+**区别**：
+
+1、语法更加简洁、清晰
+
+2、箭头函数不会创建自己的this，它会捕获自己在**定义时**（注意，是定义时，不是调用时）所处的**外层执行环境的this**，并继承这个`this`值。所以，箭头函数中`this`的指向在它**被定义的时候就已经确定**了，之后永远不会改变。
+
+3、箭头函数继承而来的**this指向永远不变**
+
+4、.call()/.apply()/.bind()**无法改变箭头函数中this的指向**（但是也不会报错）
+
+**5、箭头函数不能作为构造函数使用**：因为箭头函数没有自己的`this`，它的`this`其实是继承了外层执行环境中的`this`，且`this`指向永远不会随在哪里调用、被谁调用而改变，所以箭头函数不能作为构造函数使用，或者说构造函数不能定义成箭头函数，否则用`new`调用时会报错！
+
+**6、箭头函数没有自己的arguments**：在箭头函数中访问`arguments`实际上获得的是外层局部（函数）执行环境中的值。**可以在箭头函数中使用rest参数代替arguments对象，来访问箭头函数的参数列表**
+
+**7、箭头函数没有原型prototype**
+
+```javascript
+let sayHi = () => {    console.log('Hello World !')};
+console.log(sayHi.prototype); // undefined
+```
+
