--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -504,6 +504,8 @@ $(window).click(function(){
 
 **引用数据类型**（又称Object类型）：对象(Object)、数组(Array)、函数(Function)、Date 类型、RegExp 类型（正则）。
 
+注意：基本数据类型值不可变，基本类型的比较是值的比较；引用类型值可变，引用类型的比较是引用的比较；
+
 ##### 检测类型常用的有typeof和instanceof：
 
 ①typeof：经常用来检测一个变量是不是最基本的数据类型
@@ -622,5 +624,141 @@ var timestamp=new Date().getTime()；
 ```javascript
 //方法4
 var timestamp=+new Date();
+```
+
+
+
+#### 16.深拷贝和浅拷贝的区别？怎么实现深拷贝？
+
+| --     | 是否指向原对象 | 第一层数据为基本数据类型     | 原数据中包含引用数据类型     |
+| ------ | -------------- | ---------------------------- | ---------------------------- |
+| 赋值   | 是             | 改变会使原数据一同改变       | 改变会使原数据一同改变       |
+| 浅拷贝 | 否             | 改变**不**会使原数据一同改变 | 改变会使原数据一同改变       |
+| 深拷贝 | 否             | 改变**不**会使原数据一同改变 | 改变**不**会使原数据一同改变 |
+
+**赋值**是赋的是该对象的在栈中的地址，而不是堆中的数据，也就是两个对象指向的是同一个存储空间，是联动的；
+
+**浅拷贝**只复制一层对象的属性，如果属性是基本类型，拷贝的就是基本类型的值；如果属性是内存地址（引用类型），拷贝的就是内存地址 ，并不包括对象里面的为引用类型的数据；
+
+**浅拷贝的实现**：
+
+1.Object.assign()：把任意多个的源对象自身的可枚举属性拷贝给目标对象，然后返回目标对象，拷贝的是对象的属性的引用，而不是对象本身。
+
+```javascript
+var obj = { a: {a: "copy", b: 1} };
+var newlObj = Object.assign({}, obj);//-----------
+initalObj.a.a = "swallow";
+console.log(obj.a.a); //swallow
+```
+
+2.Array.prototype.concat()：修改新对象会改到原对象
+
+```javascript
+let arr = [1, 2, {    username: 'copy'    }];
+let arr2=arr.concat();//----------------    
+arr2[2].username = 'swallow';
+console.log(arr);
+```
+
+3.Array.prototype.slice()：同样修改新对象会改到原对象
+
+```javascript
+let arr = [1, 2, {    username: 'copy'    }];
+let arr2=arr.slice();//----------------    
+arr2[2].username = 'swallow';
+console.log(arr);
+```
+
+注：Array的slice和concat方法不修改原数组，只会返回一个浅复制了原数组中的元素的一个新数组。
+
+**深拷贝**是对对象以及对象的所有子对象进行拷贝。
+
+**深拷贝的实现**：
+
+1.JSON.parse(JSON.stringify())：用JSON.stringify将对象转成JSON字符串，再用JSON.parse()把字符串解析成对象，一去一来，**新的对象产生了，而且对象会开辟新的栈**，可以**实现数组或对象深拷贝**，但**不能处理函数**。
+
+因为JSON.stringify() 方法是将一个JavaScript值(对象或者数组)转换为一个 JSON字符串，不能接受函数
+
+```javascript
+let arr = [1, 3, {    username: ' copy'}];
+let arr2 = JSON.parse(JSON.stringify(arr));
+arr2[2].username = 'shen'; 
+console.log(arr, arr4)
+```
+
+2.递归：递归方法实现深度克隆原理：**遍历对象、数组直到里边都是基本数据类型，然后再去复制，就是深度拷贝**。
+
+```javascript
+    //定义检测数据类型的功能函数
+    function checkedType(target) {
+      return Object.prototype.toString.call(target).slice(8, -1)
+    }
+    //实现深度克隆---对象/数组
+    function clone(target) {
+      //判断拷贝的数据类型
+      //初始化变量result 成为最终克隆的数据
+      let result, targetType = checkedType(target)
+      if (targetType === 'Object') {
+        result = {}
+      } else if (targetType === 'Array') {
+        result = []
+      } else {
+        return target
+      }
+      //遍历目标数据
+      for (let i in target) {
+        //获取遍历数据结构的每一项值。
+        let value = target[i]
+        //判断目标结构里的每一值是否存在对象/数组
+        if (checkedType(value) === 'Object' ||
+          checkedType(value) === 'Array') { //对象/数组里嵌套了对象/数组
+          //继续遍历获取到value值
+          result[i] = clone(value)
+        } else { //获取到value值是基本的数据类型或者是函数。
+          result[i] = value;
+        }
+      }
+      return result
+    }
+```
+
+```javascript
+    // 内部方法：用户合并一个或多个对象到第一个对象
+    // 参数：
+    // target 目标对象  对象都合并到target里
+    // source 合并对象
+    // deep 是否执行深度合并
+    function extend(target, source, deep) {
+        for (key in source)
+            if (deep && (isPlainObject(source[key]) || isArray(source[key]))) {
+// source[key]是对象，而target[key]不是对象，则target[key]={}初始化一下，否则递归会出错的
+                if (isPlainObject(source[key]) && !isPlainObject(target[key]))
+                    target[key] = {}
+
+// source[key] 是数组，而 target[key]不是数组，则 target[key] = []初始化一下，否则递归会出错的
+                if (isArray(source[key]) && !isArray(target[key]))
+                    target[key] = []
+                // 执行递归
+                extend(target[key], source[key], deep)
+            }
+            // 不满足以上条件，说明 source[key] 是一般的值类型，直接赋值给 target 就是了
+            else if (source[key] !== undefined) target[key] = source[key]
+    }
+
+    // Copy all but undefined properties from one or more
+    // objects to the `target` object.
+    $.extend = function(target){
+        var deep, args = slice.call(arguments, 1);
+
+        //第一个参数为boolean值时，表示是否深度合并
+        if (typeof target == 'boolean') {
+            deep = target;
+            //target取第二个参数
+            target = args.shift()
+        }
+        // 遍历后面的参数，都合并到target上
+        args.forEach(function(arg){ extend(target, arg, deep) })
+        return target
+    }
 ```
 
