--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -122,9 +122,9 @@ this.$root.$on("方法名",(传递的值)=>{ })
 | 生命周期钩子  | 组件状态                                                     | 响应类型                                                     | 最佳实践                                                     |
 | ------------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | beforeCreate  | 实例初始化之后，this指向创建的实例，不能访问到data、computed、watch、methods（都不存在）上的方法和数据 | 拿不到任何信息，无法篡改数据，一般做loding，这个时候的vue实例还什么都没有，但是$route对象是存在的，可以根据路由信息进行重定向之类的操作。 | 常用于初始化非响应式变量                                     |
-| created       | 实例创建完成，可访问data、computed、watch、methods上的方法和数据，还未挂载到DOM，不能访问到$el属性，$ref属性内容为空数组 | $el,没有初始化，数据已加载完成，可以篡改数据，并更新，不会触发beforeUpdate，updated，在这结束loading，还做一些初始化，实现函数自执行 ，$ref属性内容为空数组；定义getter、setter存储器属性，在实例创建之后被调用，该阶段可以访问data，可以使用this。该阶段允许执行http请求操作。 | 常用于简单的ajax请求，页面的初始化                           |
+| created       | 实例创建完成，可访问data、computed、watch、methods上的方法和数据，还未挂载到DOM，不能访问到$el属性，$ref属性内容为空数组 | $el,没有初始化，数据已加载完成，可以篡改数据，并更新，不会触发beforeUpdate，updated，在这结束loading，还做一些初始化，实现函数自执行 ，$ref属性内容为空数组；定义getter、setter存储器属性，在实例创建之后被调用，该阶段可以访问data，可以使用this。该阶段允许执行http请求操作。 | 常用于**简单的ajax请求**，页面的初始化                       |
 | beforeMount   | 在挂载开始之前被调用，beforeMount之前，会找到对应的template，并编译成render函数 | $el已被初始化，数据已加载完成，阔以篡改数据，并更新，不会触发beforeUpdate，updated。将HTML解析生成AST节点，再根据AST节点动态生成渲染函数。**相关render函数首次被调用**(划重点)。 | \-                                                           |
-| mounted       | 实例挂载到DOM上，此时可以通过DOM API获取到DOM节点，$ref属性可以访问 | $el已被初始化,，数据已加载完成，阔以篡改数据，并更新，并且触发beforeUpdate，updated，在这发起后端请求，拿回数据，配合路由钩子做一些事情；在挂载完成之后被调用，执行render函数生成虚拟dom，创建真实dom替换虚拟dom，并挂载到实例。可以操作dom，比如事件监听 | 常用于获取信息和操作，**ajax请求**                           |
+| mounted       | 实例挂载到DOM上，此时可以通过DOM API获取到DOM节点，$ref属性可以访问 | $el已被初始化，数据已加载完成，阔以篡改数据，并更新，并且触发beforeUpdate，updated，在这发起后端请求，拿回数据，配合路由钩子做一些事情；在挂载完成之后被调用，执行render函数生成虚拟dom，创建真实dom替换虚拟dom，并挂载到实例。可以操作dom，比如事件监听 | 常用于获取信息和操作，**ajax请求**                           |
 | beforeUpdate  | 响应式数据更新时调用，发生在虚拟DOM打补丁之前                | $vm.data更新之后，虚拟dom重新渲染之前被调用。在这个钩子可以修改$vm.data，并不会触发附加的重渲染过程。 | 适合在**更新之前访问**现有的DOM，比如手动移除已添加的事件监听器 |
 | updated       | 虚拟DOM重新渲染和打补丁之后调用，组件DOM已经更新，可执行依赖于DOM的操作 | 虚拟dom重新渲染后调用，若再次修改$vm.data，会再次触发beforeUpdate、updated，进入死循环 | 避免在这个钩子函数中操作数据，可能**陷入死循环**             |
 | beforeDestroy | 实例销毁之前调用。这一步，实例仍然完全可用，this仍能获取到实例 |                                                              | **常用于销毁**定时器、解绑全局事件、销毁插件对象等操作       |
@@ -548,3 +548,108 @@ Vue.component('my-component', {
 ```
 
 data是一个函数时，每个组件实例都有自己的作用域，每个实例相互独立,不会相互影响；
+
+
+
+#### 13.vue router[路由守卫]有哪些钩子函数，哪一个是可以在全局使用的
+
+主要用来作用是**拦截导航，让他完成跳转或取消**。
+
+
+
+**完整的导航解析流程**
+
+1. 导航被触发。
+2. 在失活的组件里调用离开守卫。
+3. 调用全局的 `beforeEach` 守卫。
+4. 在重用的组件里调用 `beforeRouteUpdate` 守卫 (2.2+)。
+5. 在路由配置里调用 `beforeEnter`。
+6. 解析异步路由组件。
+7. 在被激活的组件里调用 `beforeRouteEnter`。
+8. 调用全局的 `beforeResolve` 守卫 (2.5+)。
+9. 导航被确认。
+10. 调用全局的 `afterEach` 钩子。
+11. 触发 DOM 更新。
+12. 用创建好的实例调用 `beforeRouteEnter` 守卫中传给 `next` 的回调函数。
+
+
+
+**有三种方式可以植入路由导航过程中：**全局的；单个路由独享的；组件级的
+
+**1.全局**导航钩子
+
+1. router.beforeEach **全局前置守卫** 进入路由之前
+2. router.beforeResolve 全局解析守卫(2.5.0+) 在beforeRouteEnter调用之后调用
+3. router.afterEach 全**局后置钩子** 进入路由之后
+
+```javascript
+    // main.js 入口文件
+    import router from './router'; // 引入路由
+    router.beforeEach((to, from, next) => { 
+      next();
+    });
+    router.beforeResolve((to, from, next) => {
+      next();
+    });
+    router.afterEach((to, from) => {
+      console.log('afterEach 全局后置钩子');
+    });
+```
+
+这三个参数 to 、from 、next 分别的作用：
+
+**to**: Route，代表**要进入的目标**，它是一个路由对象；路由对象指的是平时通过**this.$route获取到的路由对象**。
+
+**from**: Route，代表当前**正要离开的路由**，同样也是一个路由对象
+
+**next**: Function，这是一个**必须需要调用的方**法，而具体的执行效果则依赖 next 方法调用的参数
+
+​	**next()**：进入该路由。进入管道中的下一个钩子，如果全部的钩子执行完了，则导航的状态就是 confirmed（确认的）
+​	**next(false)**：取消进入路由，这代表中断掉当前的导航，即 to 代表的路由对象不会进入，被中断，此时该表 URL 地址会被重置到 from 路由对应的地址(也就是将要离开的路由地址)。
+​	**next(‘/’)** 和 **next({path: ‘/’})**：在中断掉当前导航的同时，跳转到一个不同的地址
+​	**next(error)**：如果传入参数是一个 Error 实例，那么导航被终止的同时会将错误传递给 router.onError() 注册过的回调
+注意：next 方法必须要调用，否则钩子函数无法 resolved
+
+不同于前置守卫，后置钩子并没有 next 函数，也不会改变导航本身
+
+**2.路由独享的钩子**：即单个路由独享的导航钩子，它是在**路由配置上直接进行定义**的
+
+```javascript
+const router = new VueRouter({
+    routes: [{
+            path: '/file',
+            component: File,
+            beforeEnter: (to, from ,next) => {/*do someting*/}
+        }]
+});
+```
+
+**3.组件内的导航钩子**：beforeRouteEnter、beforeRouteUpdate、beforeRouteLeave。直接在路由组件内部直接进行定义的
+
+```javascript
+const File = {
+    template: `<div>This is file</div>`,
+    beforeRouteEnter(to, from, next) {
+        // do someting
+        // 在渲染该组件的对应路由被 confirm 前调用
+    },
+    beforeRouteUpdate(to, from, next) {
+        // do someting
+        // 在当前路由改变，但是依然渲染该组件是调用
+    },
+    beforeRouteLeave(to, from ,next) {
+        // do someting
+        // 导航离开该组件的对应路由时被调用
+    }
+}
+```
+
+注意：beforeRouteEnter **不能获取组件实例 this**，因为当守卫执行前，组件实例被没有被创建出来，剩下两个钩子则可以正常获取组件实例 this；但是并不意味着在 beforeRouteEnter 中无法访问组件实例，我们可以通过给 next 传入一个回调来访问组件实例。在导航被确认是，会执行这个回调，这时就可以访问组件实例了：
+
+```javascript
+//注意，仅仅是 beforRouteEnter 支持给 next 传递回调，其他两个并不支持。因为归根结底，支持回调是为了解决 this 问题，而其他两个钩子的 this 可以正确访问到组件实例，所有没有必要使用回调
+beforeRouteEnter(to, from, next) {
+    next (vm => {/*这里通过 vm 来访问组件实例解决了没有 this 的问题*/})
+}
+```
+
