--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -404,11 +404,11 @@ export default {
 | GET                                    | POST                               |
 | -------------------------------------- | ---------------------------------- |
 | 向服务器获取指定资源                   | 向服务器提交数据，数据放在请求体里 |
-| 把参数包含在`URL`中                    | 通过`request body`传递参数         |
+| **把参数包含在`URL`中**                | 通过`request body`传递参数         |
 | 有长度限制，2kB                        | 没有限制                           |
 | 只能进行`URL`编码                      | 支持多种编码方式                   |
-| 在浏览器回退时是无害的                 | 在浏览器回退时，POST会再次提交请求 |
-| GET请求会被浏览器主动cache             | POST不会缓存，除非手动设置         |
+| 在浏览器**回退时是无害的**             | 在浏览器回退时，POST会再次提交请求 |
+| GET请求会被浏览器**主动cache**         | POST不会缓存，除非手动设置         |
 | 请求参数会被完整保留在浏览器历史记录里 | 参数不会被保留                     |
 
 
@@ -587,6 +587,35 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 
 
 
+#### 13.SEO搜索引擎优化有哪些方法？
+
+1.创建唯一且准确的**网页标题` <title>`**
+
+```html
+<title>前端搜索引擎优化的技巧</title>
+```
+
+2.使用 **`<meta>` 的 `keywords` 元数据**来提炼网页重要关键字，以及 `description` 元数据准确总结网页内容。
+
+```html
+<meta name='keywords' content='SEO,title,meta,语义化,alt'>
+<meta name='description' content='介绍搜索引擎优化的技巧:语义化标签、img的alt属性等。'>
+```
+
+3.使用**语义化元素**：`<em>` 或 `<strong>`
+
+4.利用**` <img> `中的`alt` 属性**
+
+5.设置`rel='nofollow' `忽略跟踪
+
+6.尽量让结构（HTML）、表现（CSS）及行为（JavaScript）**三者分离**。如果在一个 HTML 页面中，编写大量的 CSS 样式或脚本，会拖慢其加载速度，此外，如果不为 `<img>` 定义宽高，那么会引起页面重新渲染，同样也会影响加载速度。一旦加载超时，“蜘蛛”就会放弃爬取。如果这个 HTML 文档内容比较独特丰富（合理插入图片说明）等，会被认为质量较高符合用户需求，从而提高 SEO 的排名。
+
+
+
+
+
+
+
 
 
 1.数组常用的遍历方法有哪几种？（for...in一般用于对象）
@@ -599,31 +628,19 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 
 5.git的使用，常用操作代码有哪些？
 
-6.简单说一下get和post区别？
-
-7.SEO搜索引擎优化？
-
 8.左边固定，右边自适应
 
 9.学过哪些基础框架？
 
 10.vue源码了解过吗？怎么实现数据的劫持？
 
-11.分别在什么时候使用created、mounted？
-
 12.Promise、async await 的使用？
-
-13.箭头函数和一般函数有什么区别？
-
-14.后端了解过什么语言？
 
 15.jQuery中绑定时间用的on和bind有什么区别？
 
 16.前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
 
 17.vue-cli如何使用json数据模拟？
-
-18.深拷贝和浅拷贝的区别？怎么实现深拷贝
 
 19.数组的常用操作方法？其中splice 和slice有什么区别？
 
@@ -697,8 +714,6 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 
 57.react的核心是什么
 
-58.vue router有哪些钩子函数，介绍，哪一个是可以在全局使用的
-
 59.为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
 
 60.在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
@@ -733,8 +748,7 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 82.画一个三角形
 83.实现0.5px横线
 84.rem 与em
-85rem相对于根节点。em相对于父元素
-86.水平垂直居中
+rem相对于根节点。em相对于父元素
 87.盒子模型height
 88.定时器一秒加一次
 89.滚动条
