--- a/_posts/2019-06-17-冒泡排序、插入排序.md
+++ b/_posts/2019-06-17-冒泡排序、插入排序.md
@@ -14,21 +14,27 @@ typora-root-url: ..
 
 
 # 数组、两种冒泡排序、插入排序
-## 数组:一组有序的数据,数据类型可以不一样。
+数组:一组有序的数据,数据类型可以不一样。
 
 数组的定义:2种方式
- 1. 通过**构造函数**创建数组/实例化Array对象
-	* 语法: `var arrname=new Array();` 创建一个**空数组**。
-    * 语法: `var arrname=new Array(num);` 创建一个数组**长度为num的数组**；其中每一项都是 `undefined`。
-    * 语法: `var arrname=new Array(n1,n2...);` 创建由**传入参数组成的一个数组**。
- 2. 通过**字面量**的方式创建数组/使用[]方式
-    * 语法：`var array=[];` **创建空数组**
+
+1. 通过**构造函数**创建数组/实例化Array对象
+
+语法: `var arrname=new Array();` 创建一个**空数组**。
+
+语法: `var arrname=new Array(num);` 创建一个数组**长度为num的数组**；其中每一项都是 `undefined`。
+
+语法: `var arrname=new Array(n1,n2...);` 创建由**传入参数组成的一个数组**。
+
+2. 通过**字面量**的方式创建数组/使用[]方式
+
+语法：`var array=[];` **创建空数组**
 
 ###  冒泡排序
 
-- 外面的循环控制的是比较的轮数；里面的循环控制的是每一轮比较的次数。
-- 1.从前往后
-  注意：i取值的时候，不能取到`length-1`，否则j就会越界。
+外面的循环控制的是比较的轮数；里面的循环控制的是每一轮比较的次数。
+
+1.从前往后  注意：i取值的时候，不能取到`length-1`，否则j就会越界。
 
 ```javascript
 var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
@@ -42,8 +48,7 @@ var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
             }
         }
 ```
-- 2.从后往前
-  先通过循环确定最后一位的最大值，然后继续往前确定数值。
+2.从后往前  先通过循环确定最后一位的最大值，然后继续往前确定数值。
 
 ```javascript
 var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
@@ -57,15 +62,13 @@ var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
             }
         }
 ```
-### 插入排序
-
-+ 是冒泡排序的优化。
+### 插入排序  是冒泡排序的优化。
 
 **实现原理**：通过构建有序数组对元素进行存储。
 对于未排序的数组，在已排序的数组中从最后一个元素向第一个元素遍历，找到相应位置并插入。
 
 ```javascript
-        var arr = [89, 56, 100, 21, 87, 45, 1, 88]; // 待排序数组
+var arr = [89, 56, 100, 21, 87, 45, 1, 88]; // 待排序数组
         // 按照从小到大的顺序排列
         for(var i= 1;i<arr.length;i++){
             for(var j=i;j>0;--j){
@@ -73,5 +76,5 @@ var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
                     [[arr[j-1]],arr[j]]=[[arr[j]],arr[j-1]];
                 }
             }
-        }
+}
 ```
