--- a/_posts/2019-07-07-es6相关 面试问题.md
+++ b/_posts/2019-07-07-es6相关 面试问题.md
@@ -333,3 +333,70 @@ let sayHi = () => {    console.log('Hello World !')};
 console.log(sayHi.prototype); // undefined
 ```
 
+
+
+#### 8.Promise、async await 的使用？
+
+promise和async/await都是异步方案，promise是es6的新特性，而async/await是es7新出的特性。
+
+Promise是一个对象，可以**实现链式的写法**来实现同步异步操作，
+
+**then()...catch()...**，then表示上一个promise执行完后执行，如果出现错误就会传入catch里面，通常这么写：
+
+```javascript
+var pro = new promise (function(resolve,reject){
+    resolve("success");
+    console.log("afterresolve");
+    reject("error");
+});
+pro.then(result=>{
+    console.log(result);
+});
+pro.catch(result=>{
+    console.log(result);
+})
+//afterresolve success
+```
+
+**resolve下面的语句其实是可以执行的**，那么为什么reject的状态信息在下面没有接受到呢？
+
+这就是因为Promise对象的特点：**状态的凝固**。new出一个Promise对象时，这个对象的起始状态就是Pending状态，在根据resolve或reject返回Fulfilled状态/Rejected状态。
+
+```javascript
+new Promise((resolve, reject) => {
+    var param = 'Promise 执行完后返回的数据';
+    var error = 'Promise 异步执行异常';
+    if( error ) {
+        reject(new Error('Promise 异步执行异常'));
+    } else {
+        resolve(param);
+    }
+}).then((res) => {
+//  这里res就是Promise中的param参数
+    console.log(res);  //  Promise 执行完后返回的数据
+    var param = '第一个then 执行完后返回的数据';
+    return param;
+}).then((res) => {
+//  这里的res就不是Promise中resolve的param参数了，而是上一个then中的返回值
+    console.log(res);  //  第一个then 执行完后返回的数据
+}).catch((error) => {
+//  这里是Promise执行reject方法中的参数
+    console.log(error); //  Promise 异步执行异常
+});
+```
+
+第一个then()触发条件：是 Promise() 实例化时resolve()触发，resolve(param);
+
+第二个及以后的then() 触发条件是第一个then()执行完成，并且将return值作为下一个then的参数；
+
+catch()触发条件是执行了reject()。
+
+需要注意的是**resolve与reject只能执行一个**。也就是说如果不加入判断的话，某一个先执行了，后面的就自动忽略了。
+
+
+
+对于**async/await**来说是基于promise的，他可以让我们更加优雅的写出代码，而替代then()的写法；
+
+需要注意的就是**await是强制把异步变成了同步，这一句代码执行完，才会执行下一句**。
+
+ await必须用在async方法中
