--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -762,3 +762,116 @@ console.log(arr, arr4)
     }
 ```
 
+#### 17.数组常用的遍历方法有哪几种？（for...in一般用于对象）
+
+* 1.普通for循环
+* 性能：使用频率最高，性能不弱，但仍有优化空间
+```javascript
+for(j = 0; j < arr.length; j++) {}
+```
+
+* 2.优化版for循环
+
+* 性能：使用临时变量，将长度缓存起来，避免重复获取数组长度，当数组较大时优化效果才会比较明显。
+
+  基本上是所有循环遍历方法中**性能最高**的一种。
+```javascript
+for(j = 0,len=arr.length; j < len; j++) {}
+```
+
+* 3.foreach循环，没有返回值，纯粹用来遍历数组
+* 性能：数组自带的foreach循环，性能比普通for循环弱
+```javascript
+let numbers = [1, 2, 3, 4];    
+numbers.forEach((item, index, array)=>{        
+    // 执行某些操作    
+})
+```
+
+* 4.for...in循环
+* 性能：**效率最低**，不推荐用于数组遍历，一般用于对象循环
+```javascript
+for(j in arr) {} 
+```
+
+* 5.for...of循环  
+
+* 性能：性能好于for...in，但仍**低于普通for循环**
+
+  不仅可以遍历数组，还可以遍历Map、Set这两种ES6新推出的数据结构。
+
+```javascript
+let numbers = [1, 2, 3, 4];
+for(let item of numbers){    
+    console.log(item);
+}
+//输出
+// 1
+// 2
+// 3
+// 4
+```
+
+* map遍历 
+
+* 注意： map() 不会对空数组进行检测；map() 不会改变原始数组。
+
+  对数组的每一项运行给定函数，返回每次函数调用的返回值组成的数组。 
+
+```javascript
+let numbers = [1, 2, 3, 4];    
+let mapResult = numbers.map((item, index, array)=>{        
+    return item * 2;    
+})    
+console.log(mapResult); // 输出 [2, 4, 6, 8]
+```
+
+性能：比较优雅，**低于普通for循环**，还比不上foreach
+
+* 大致比较如下：for循环 > forEach > for...of > for...in > map
+
+还有几个用的比较少的es5的循环方法：
+
+**every( )**：对数组中的每一项运行给定函数，如果该函数对每一项都返回true，则every( )返回truelet
+
+```javascript
+ numbers = [1, 2, 3, 4];    
+let everyResult = numbers.every((item, index, array)=>{        
+    return item > 1;    
+})    
+console.log(everyResult);  // 输出 false
+```
+
+**filter( )**：对数组中的每一项运行给定函数，然后返回该函数会返回true的项。
+
+```javascript
+let numbers = [1, 2, 3, 4];    
+let filterResult = numbers.filter((item, index, array)=>{        
+    return item > 1;    
+})    
+console.log(filterResult);  // 输出 [2, 3, 4]
+```
+
+**some( )**：对数组的每一项运行给定函数，如果该函数对任一项返回true，则some( )就返回true。some和every就像 || 和 &&，some是只要有一项满足，就返回true。
+
+```javascript
+let numbers = [1, 2, 3, 4];    
+let someResult = numbers.some((item, index, array)=>{        
+    return item > 3;    
+})    
+console.log(someResult);  // 输出 true
+```
+
+注意：ES5的这几个迭代方法，如果是只对item（当前遍历的数组项）进行操作，是**不会改变原数组**的，但是也可以通过给定函数中接收的index参数来改变原数组使用选择的时候，以现在的硬件水平，这里的差异其实可以忽略，**考虑语义和功能需求来选择**：
+
+如果你需要**将数组按照给定规则转换**并**返回该结果数组**，就使用map。
+
+如果你需要进行**简单的遍历**，用 forEach 或者 for of，但是 forEach 不能通过return和break语句来终止循环，所以
+
+如果需要**中途终止循环**，就使用 for...of或者 for循环。
+
+如果是在遍历数组的同时，需要**改变原数组**中的对应项，就用for循环。
+
+for...in会把数组所拥有可枚举的属性都遍历一次，所以可能会有意想不到的结果，不推荐用来遍历数组。
+
+另外的三个，every( )、filter( )、some( )按功能需要来使用即可。
