--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -642,7 +642,7 @@ git push origin --all
 //7、如果有多个分支，重复5和6
 ```
 
-**1 创建新分支(本地和远程)**
+**① 创建新分支(本地和远程)**
 
 ```javascript
 //1 创建dev_pg分支
@@ -658,7 +658,7 @@ git branch 分支名   #创建分支
 git checkout 分支名 #切换分支
 ```
 
-**2 删除分支**
+**② 删除分支**
 
 ```javascript
 //1 删除本地分支(dev_pg)
@@ -667,7 +667,7 @@ git branch -D dev_pg
 git branch -r -D origin/dev_pg
 ```
 
-**3 查询分支**
+**③ 查询分支**
 
 ```javascript
 // 1 列出所有分支(本地及远程) -a（all的意思）
@@ -678,13 +678,13 @@ git branch -r
 git branch -l
 ```
 
-**4 查询本地git状态**
+**④ 查询本地git状态**
 
 ```javascript
 git status
 ```
 
-**5 合并代码**
+**⑤ 合并代码**
 
 ```javascript
 //1 切换到合并分支 (例如dev分支开发，需要合并到master分支。则先切换到master分支)
@@ -701,6 +701,12 @@ git push origin master
 
 
 
+#### 15、学过哪些基础框架？
+
+前端框架：Vue、AngularJS、React （还有其他的话请补充，只列主流的）
+
+界面框架/UI框架：Bootstrap
+
 
 
 
@@ -711,137 +717,131 @@ git push origin master
 
 3. Ajax遇到拦截器，请求数据要重新处理怎么做？
 
-4. 左边固定，右边自适应
+7. jQuery中绑定时间用的on和bind有什么区别？
 
-5. 学过哪些基础框架？
+8. 前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
 
-6. 10.vue源码了解过吗？怎么实现数据的劫持？
+9. vue-cli如何使用json数据模拟？
 
-7. 15.jQuery中绑定时间用的on和bind有什么区别？
+10. 数组的常用操作方法？其中splice 和slice有什么区别？
 
-8. 16.前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
+11. js中怎么绑定事件？
 
-9. 17.vue-cli如何使用json数据模拟？
+12. 事件委托是什么？
 
-10. 19.数组的常用操作方法？其中splice 和slice有什么区别？
+13. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
 
-11. 20.js中怎么绑定事件？
+14. ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
 
-12. 21.事件委托是什么？
+15. for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
 
-13. 22.HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
+16. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
 
-14. 23.ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
+17. vue中的计算属性computed、watch有什么区别，分别应用于什么场景
 
-15. 24.for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
+18. vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
 
-16. 25.bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
+19. Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
 
-17. 26.vue中的计算属性computed、watch有什么区别，分别应用于什么场景
+20. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
 
-18. 27.vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
+21. 项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
 
-19. 28.Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
+22. vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
 
-20. 29.项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
+23. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
 
-21. 30.项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
+24. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
 
-22. 31.vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
+25. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
 
-23. 32.学习的方法有哪些，《js高级程序设计》中函数重载了解吗
+26. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
 
-24. 33.在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
+27. addEventListener可以多次给DOM对象增加监听事件吗？
 
-25. 35.eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
-
-26. 36.一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
-
-27. 37.addEventListener可以多次给DOM对象增加监听事件吗？
-
-28. 38.attachEvent可以删除DOM对象的监听事件吗.
+28. attachEvent可以删除DOM对象的监听事件吗.
 
     `attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
 
-29. 40.form标签对之间，可以出现p、ul等非表单域元素吗
+29. form标签对之间，可以出现p、ul等非表单域元素吗
 
-30. 41.在js中，两个整数进行除（/）运算，结果也为整数吗？
+30. 在js中，两个整数进行除（/）运算，结果也为整数吗？
 
-31. 42.属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+31. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
 
-32. 44.js或DOM操作方便，浏览器兼容的注意项有哪些
+32. js或DOM操作方便，浏览器兼容的注意项有哪些
 
-33. 45.Web前端开发常见的安全漏洞
+33. Web前端开发常见的安全漏洞
 
-34. 50.轮播图的实现及后台数据抓取
+34. 轮播图的实现及后台数据抓取
 
-35. 51.安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
+35. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
 
-36. 52.列举常用浏览器以及说明其内核
+36. 列举常用浏览器以及说明其内核
 
-37. 53.http和https分别是什么，有什么区别
+37. http和https分别是什么，有什么区别
 
-38. 55.从输入URL到页面加载完成，发生了什么
+38. 从输入URL到页面加载完成，发生了什么
 
-39. 56.可以通过什么途径查看一个网站所使用的技术
+39. 可以通过什么途径查看一个网站所使用的技术
 
-40. 57.react的核心是什么
+40. react的核心是什么
 
-41. 59.为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
+41. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
 
-42. 60.在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
+42. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
 
-43. 61.公司要求写代码，用js原生仿照发布者订阅者模式写。
+43. 公司要求写代码，用js原生仿照发布者订阅者模式写。
 
-44. 62.写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+44. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
 
-45. 63.原型链有了解么？
+45. 原型链有了解么？
 
-46. 64.虚拟DOM说一下？在生命周期里的对应阶段？
+46. 虚拟DOM说一下？在生命周期里的对应阶段？
 
-47. 65.用的前端组件是什么？
+47. 用的前端组件是什么？
 
-48. 66.画一下项目的界面结构并且简单介绍下项目
+48. 画一下项目的界面结构并且简单介绍下项目
 
-49. 67.问了一下通讯录界面的布局
+49. 问了一下通讯录界面的布局
 
-50. 68.验证码有写过没
+50. 验证码有写过没
 
-51. 69.npm有学过除简单命令之外的服务构建么？
+51. npm有学过除简单命令之外的服务构建么？
 
-52. 70.说一下webpack的配置问题
+52. 说一下webpack的配置问题
 
-53. 71.echarts有用过么？WebGL知道么？
+53. echarts有用过么？WebGL知道么？
 
-54. 73.数据结构了解多少？数据库呢？
+54. 数据结构了解多少？数据库呢？
 
-55. 74.es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+55. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
 
-56. 75.在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+56. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
 
-57. 76.评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+57. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
 
-58. 77.怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+58. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
 
-59. 78.react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+59. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
 
-60. 79.数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+60. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
 
-61. 81.http与https
+61. http与https
 
-62. 82.画一个三角形
+62. 画一个三角形
 
-63. 83.实现0.5px横线
+63. 实现0.5px横线
 
-64. 84.rem 与em
+64. rem 与em
 
     rem相对于根节点。em相对于父元素
 
-65. 87.盒子模型height
+65. 盒子模型height
 
-66. 88.定时器一秒加一次
+66. 定时器一秒加一次
 
-67. 89.滚动条
+67. 滚动条
 
-68. 90.Webscoket（解决痛点）
+68. Webscoket（解决痛点）
 
