--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -401,7 +401,7 @@ let bar = async function(){
 
 #### 11.JS设置CSS样式的几种方式
 
-**1. 直接设置style的属性**  某些情况用这个设置 !important值无效
+​	**1. 直接设置style的属性**  某些情况用这个设置 !important值无效
 
 ```css
 element.style.height = '100px';
@@ -409,26 +409,26 @@ element.style.height = '100px';
 如果想保留 - 号，就中括号的形式  element.style['text-align'] = '100px';*/
 ```
 
-**2. 直接设置属性**（只能用于某些属性，相关样式会自动识别）
+​	**2. 直接设置属性**（只能用于某些属性，相关样式会自动识别）
 
 ```css
 element.setAttribute('height', 100);
 element.setAttribute('height', '100px');
 ```
 
-**3. 设置style的属性**
+​	**3. 设置style的属性**
 
 ```css
 element.setAttribute('style', 'height: 100px !important');
 ```
 
-**4. 使用setProperty**  如果要设置!important，推荐用这种方法设置第三个参数
+​	**4. 使用setProperty**  如果要设置!important，推荐用这种方法设置第三个参数
 
 ```css
 element.style.setProperty('height', '300px', 'important');
 ```
 
-**5. 改变class**   比如JQ的更改class相关方法
+​	**5. 改变class**   比如JQ的更改class相关方法
 
 ```css
 element.className = 'blue';
@@ -436,14 +436,14 @@ element.className += 'blue fb';
 /*因JS获取不到css的伪元素，所以可以通过改变伪元素父级的class来动态更改伪元素的样式*/
 ```
 
-**6. 设置cssText**
+​	**6. 设置cssText**
 
 ```css
 element.style.cssText = 'height: 100px !important';
 element.style.cssText += 'height: 100px !important';
 ```
 
-**7. 创建引入新的css样式文件**
+​	**7. 创建引入新的css样式文件**
 
 ```javascript
 	function addNewStyle(newStyle) {
@@ -459,7 +459,7 @@ element.style.cssText += 'height: 100px !important';
 	addNewStyle('.box {height: 100px !important;}');
 ```
 
-**8. 使用addRule、insertRule**
+​	**8. 使用addRule、insertRule**
 
 ```javascript
 		// 在原有样式操作
@@ -762,6 +762,8 @@ console.log(arr, arr4)
     }
 ```
 
+
+
 #### 17.数组常用的遍历方法有哪几种？（for...in一般用于对象）
 
 * 1.普通for循环
@@ -875,3 +877,21 @@ console.log(someResult);  // 输出 true
 for...in会把数组所拥有可枚举的属性都遍历一次，所以可能会有意想不到的结果，不推荐用来遍历数组。
 
 另外的三个，every( )、filter( )、some( )按功能需要来使用即可。
+
+
+
+#### 18.JS获取url参数
+
+```javascript
+function getQueryVariable(variable)
+{
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+}
+```
+
