--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -67,13 +67,31 @@ Object.keys(student).forEach(key => defineReactive(student, key))
 
 ​	**针对 Array 类型的劫持**
 
-​	数组是一种特殊的对象，**其下标实际上就是对象的属性，所以理论上是可以采用 Object.defineProperty() 方法处理数组对象**。 
+​	数组是一种特殊的对象，**其下标实际上就是对象的属性，所以理论上是可以采用 `Object.defineProperty()` 方法处理数组对象**。 
 
 ​	但是 Vue 并没有采用上述方法劫持数组对象，原因分析：1、特殊的 length 属性，相比较对象的属性，数组下标变化地相对频繁，并且改变数组长度的方法也比较灵活，一旦数组的长度发生变化，那么在无法自动感知的情况下，开发者只能手动更新新增的数组下标，这可是一个很繁琐的工作。2、数组主要的操作场景还是遍历，而对于每一个元素都挂载一个 get 和 set 方法，恐怕也是不小的性能负担。
 
-​	**数组方法的劫持**：最终 Vue 选择劫持一些**常用的数组操作方法，从而知晓数组的变化情况**：`push',  'pop',  'shift',  'unshift',  'sort',  'reverse',  'splice'`。数组方法的劫持涉及到原型相关的知识，首先数组实例大部分方法都是来源于 Array.prototype 对象。顺便提一下，**采用 Vue.set() 方法设置数组元素时，Vue 内部实际上是调用劫持后的 splice() 方法来触发更新**。
+​	**数组方法的劫持**：最终 Vue 选择劫持一些**常用的数组操作方法，从而知晓数组的变化情况**：`push',  'pop',  'shift',  'unshift',  'sort',  'reverse',  'splice'`。数组方法的劫持涉及到原型相关的知识，首先数组实例大部分方法都是来源于 `Array.prototype` 对象。顺便提一下，**采用 Vue.set() 方法设置数组元素时，Vue 内部实际上是调用劫持后的 splice() 方法来触发更新**。
 
-**总结**：由上述内容可知，Vue 中的数据劫持分为两大部分：针对 Object 类型，采用 Object.defineProperty() 方法劫持属性的读取和设置方法；针对 Array 类型，采用原型相关的知识劫持常用的函数，从而知晓当前数组发生变化。  并且 Object.defineProperty() 方法存在以下**缺陷**：每次只能设置一个具体的属性，导致需要遍历对象来设置属性，同时也导致了无法探测新增属性；属性描述符 configurable 对其的影响是致命的。
+**总结**：由上述内容可知，Vue 中的数据劫持分为两大部分：
+
+针对 Object 类型，采用 `Object.defineProperty() `方法劫持属性的读取和设置方法；
+
+针对 Array 类型，采用原型相关的知识劫持常用的函数，从而知晓当前数组发生变化。  
+
+并且 `Object.defineProperty()` 方法存在以下**缺陷**：**每次只能设置一个具体的属性**，导致需要遍历对象来设置属性，同时也导致了无法探测新增属性；属性描述符 configurable 对其的影响是致命的。
+
+
+
+发布订阅模式
+
+在**观察者**模式中，观察者是知道Subject的，Subject一直保持对观察者进行记录。然而，在**发布订阅**模式中，发布者和订阅者**不知道对方的存在**。它们只有通过消息代理进行通信。
+
+在**发布订阅**模式中，组件是松散耦合的，正好和观察者模式相反。
+
+**观察者模式**大多数时候是**同步**的，比如当事件触发，Subject就会去调用观察者的方法。而**发布-订阅**模式大多数时候是**异步的**（使用消息队列）。
+
+![1568963964686](/img/assets_2019/1568963964686.png)
 
 
 
@@ -675,7 +693,7 @@ const router = new VueRouter({
 });
 ```
 
-**③.组件内的导航钩子**：beforeRouteEnter、beforeRouteUpdate、beforeRouteLeave。直接在路由组件内部直接进行定义的
+**③.组件内的导航钩子**：`beforeRouteEnter`、`beforeRouteUpdate`、`beforeRouteLeave`。直接在路由组件内部直接进行定义的
 
 ```javascript
 const File = {
@@ -695,7 +713,7 @@ const File = {
 }
 ```
 
-注意：beforeRouteEnter **不能获取组件实例 this**，因为当守卫执行前，组件实例被没有被创建出来，剩下两个钩子则可以正常获取组件实例 this；但是并不意味着在 beforeRouteEnter 中无法访问组件实例，我们可以通过给 next 传入一个回调来访问组件实例。在导航被确认是，会执行这个回调，这时就可以访问组件实例了：
+注意：`beforeRouteEnter` **不能获取组件实例 this**，因为当守卫执行前，组件实例被没有被创建出来，剩下两个钩子则可以正常获取组件实例 this；但是并不意味着在` beforeRouteEnter `中无法访问组件实例，我们可以通过给 next 传入一个回调来访问组件实例。在导航被确认是，会执行这个回调，这时就可以访问组件实例了：
 
 ```javascript
 //注意，仅仅是 beforRouteEnter 支持给 next 传递回调，其他两个并不支持。因为归根结底，支持回调是为了解决 this 问题，而其他两个钩子的 this 可以正确访问到组件实例，所有没有必要使用回调
