--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -546,7 +546,8 @@ export default {
 
 ##### ③js方面
 
-脚本放到HTML代码页底部
+脚本放到HTML代码页底部 
+
 从页面中分离js代码，从外部引入
 压缩代码
 减少对DOM的访问
@@ -709,6 +710,119 @@ git push origin master
 
 
 
+#### 16、jQuery中绑定事件用的on和bind有什么区别？
+
+```javascript
+bind(type, [data], fn)//解绑用unbind
+on(type,[selector],[data],fn)//解绑用off
+```
+
+区别在于：是否支持selector这个参数值。
+
+​	由于javascript的**事件冒泡特性**，如果我们在父元素上注册了一个事件处理函数，当子元素上发生这个事件的时候，父元素上的事件处理函数也会被触发。**如果使用on的时候，不设置selector，那么on与bind就没有区别**了。
+
+```html
+<div id="parent">
+	<input type="button" value="a" id="a"/>
+	<input type="button" value="b" id="b"/>
+</div>
+```
+
+```javascript
+/*点击a的时候触发，点击b的时候不触发*/
+$("#parent").on("click","#a",function(){
+	alert($(this).attr("id"));
+});
+```
+
+​	**on()函数的参数selector就是为了在事件冒泡的时候，让父元素能够过滤掉子元素上发生的事件。**如果使用了bind，那么就没有这个能力，子元素上发生的事件一定会触发父元素事件。
+
+bind()、unbind()、on()、off()的几个通性：（这里主要写bind和unbind）
+
+①、**JQuery中事件可以重复绑定，不会覆盖**
+
+```javascript
+//点击button1的时候，这2个事件处理函数都会触发
+$("#button1").bind("click",function(){	alert("func1");});
+$("#button1").bind("click",function(){	alert("func2");});
+```
+
+②、**使用bind一次绑定多个事件和处理函数**
+
+```javascript
+//多个事件需要注册相同的处理函数
+$("#button1").bind("mousedown mouseup",function(){
+	console.log(11);
+});
+```
+
+```javascript
+//如果每个事件的处理函数不同，可以用json对象
+$("#button1").bind(
+	{
+		"mousedown":function(){
+			console.log("mousedown");
+		},
+		"mouseup":function(){
+			console.log("mouseup");
+		}
+	}
+);
+```
+
+③、**传递event对象和自定义参数**
+
+```javascript
+//如果我们指定了自定义的参数，那么JQuery会将它放在事件对象的data属性中，即通过eventObject.data就能够拿到我们传递的参数值
+$("#button1").bind("click", {name:"aty"}, function(eventObject){  
+    alert("params=" + eventObject.data.name);  
+});
+```
+
+④、**事件取消的三种形式**
+
+unbind用来取消之前通过bind绑定的事件处理函数，总的来说有三种形式：**取消所有事件**、**取消某种类型的事件**、**取消某种类型下的某个事件处理函数**。
+
+```javascript
+$("#button1").unbind()//取消button1上所有已经绑定的事件处理函数。
+$("#button1").unbind("click")//只取消button1上绑定的click类型的事件处理函数。
+```
+
+取消某种类型下的某个事件处理函数：
+
+```javascript
+/容易犯的错误写法
+$("#button1").bind("click",function(eventObj){console.log("click1");}); 
+$("#button1").bind("click",function(eventObj){console.log("click2");}); 
+
+// 这种写法是错误的，虽然用的匿名函数的功能相同，但这两个函数不是同一个，它们占用的是不同的内存空间
+$("#button1").unbind("click",function(eventObj){console.log("click2");});
+```
+
+```javascript
+/正确写法
+$("#button1").bind("click",func1); 
+$("#button1").bind("click",func2); 
+// 这种做法不允许使用匿名函数，我们不得不暴露全局的函数，JQuery提供了事件命名空间机制
+$("#button1").unbind("click",func2); 
+function func1(){console.log("click1");}
+function func2(){console.log("click2");}
+```
+
+⑤、**事件命名空间**
+
+​	事件类型后面**以点语法附加一个别名**，以便引用事件，如”click.a”，其中”a”就是click当前事件类型的别名，即事件命名空间。
+
+```javascript
+$("#button1").bind("click.a",function(eventObj){console.log("click1");}); 
+$("#button1").bind("click.b",function(eventObj){console.log("click2");}); 
+ 
+// 使用命名空间，能够以一种更优雅的方式取消某种事件类型下的某个事件处理函数
+$("#button1").unbind("click.a");
+```
+
+能够按照命名空间来取消事件`$("#button1").unbind(".a");`
+
 
 
 1. Canvas绘图；
@@ -717,9 +831,7 @@ git push origin master
 
 3. Ajax遇到拦截器，请求数据要重新处理怎么做？
 
-7. jQuery中绑定时间用的on和bind有什么区别？
-
-8. 前端常用的性能优化有哪些？加快页面打开的速度怎么处理？
+8. 加快页面打开的速度怎么处理？
 
 9. vue-cli如何使用json数据模拟？
 
