--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -301,6 +301,61 @@ mounted() {
 #### 2.牛客网刷企业真题JavaScript(V8)
 
 ```javascript
+//单行输入，单行输出
+sc=readline()
+var arr = sc.split(' ');
+n=parseInt(arr[0]);
+m=parseInt(arr[1]);
+print(m+n)
+//输入
+3 4
+//输出
+7
+```
+
+```javascript
+//多行输入，多行输出
+while (sc = readline()) {
+     var arr = sc.split(' ');
+     n = parseInt(arr[0]);
+     m = parseInt(arr[1]);
+     print(m+n);
+}
+//输入
+3 4
+5 6
+//输出
+7
+11
+```
+
+```javascript
+//多行输入，多行输出
+var n = parseInt(readline());
+var ans = 0;
+for (var i = 0; i < n; i++) {
+    lines = readline().split(" ")
+    for (var j = 0; j < lines.length; j++) {
+      ans = lines[j];
+      print(ans);
+      print(' ');
+    }
+    print('\n')    
+}
+//输入
+2
+3 4
+5 6
+//输出
+3 4 
+5 6 
+```
+
+
+
+
+
+```javascript
 //牛客网帮助文档里面复制的
   while (line = readline()) {
     //在这里写代码
@@ -333,7 +388,8 @@ mounted() {
   for (var i = 0; i < n; i++) {
     lines = readline().split(" ")
     for (var j = 0; j < lines.length; j++) {
-      ans += parseInt(lines[j]);
+      ans += 
+          (lines[j]);
     }
     print(ans);
   }
