面试题整理
面试题整理

--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -531,18 +531,19 @@ export default {
 
 ##### ①内容方面
 
-减少HTTP请求次数
-减少DOM操作
-减少DNS查询
-使用Ajax 可缓存
+**减少HTTP请求次数**（使用精灵图）
+**减少DOM操作**
+**减少DNS查询**：当客户端DNS缓存（浏览器和操作系统）缓存为空时，DNS查找的数量与要加载的Web页面中唯一主机名的数量相同，包括页面URL、脚本、样式表、图片、Flash对象等的主机名。减少主机名的 数量就可以减少DNS查找的数量。减少唯一主机名的数量会潜在减少页面中并行下载的数量（HTTP 1.1规范建议从每个主机名并行下载两个组件，但实际上可以多个），这样减少主机名和并行下载的方案会产生矛盾，需要大家自己权衡。建议将组件放到至少两个但不多于4个主机名下，减少DNS查找的同时也允许高度并行下载。
+
+**使用Ajax 可缓存**：POST的请求，是不可以在客户端缓存的，每次请求都需要发送给服务器进行处理，每次都会返回状态码200。（可以在服务器端对数据进行缓存，以便提高处理速度）。GET的请求，是可以（而且默认）在客户端进行缓存的，除非指定了不同的地址，否则同一个地址的AJAX请求，不会重复在服务器执行，而是返回304。
 
 ##### ②css方面
 
-把css样式HTML代码页的上端
+把css样式HTML代码页的头部，防止白屏
 从页面中分离css代码，从外部引入
 压缩代码
 不要使用@import
-避免css表达式
+避免css表达式`width: expression(func(),document.body.clientWidth > 400 ? "400px" : "auto");`
 
 ##### ③js方面
 
@@ -585,6 +586,8 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
         }
 })
 ```
+
+#### 
 
 
 
@@ -825,13 +828,23 @@ $("#button1").unbind("click.a");
 
 
 
+
+
+#### 17.从输入URL到页面加载完成，发生了什么
+
+域名解析 --> 发起TCP的3次握手 --> 建立TCP连接后发起http请求 --> 服务器响应http请求，浏览器得到html代码 --> 浏览器解析html代码，并请求html代码中的资源（如js、css、图片等） --> 浏览器对页面进行渲染呈现给用户
+
+
+
+
+
+
+
 1. Canvas绘图；
 
 2. Webpack；
 
 3. Ajax遇到拦截器，请求数据要重新处理怎么做？
-
-8. 加快页面打开的速度怎么处理？
 
 9. vue-cli如何使用json数据模拟？
 
@@ -893,67 +906,65 @@ $("#button1").unbind("click.a");
 
 37. http和https分别是什么，有什么区别
 
-38. 从输入URL到页面加载完成，发生了什么
+33. 可以通过什么途径查看一个网站所使用的技术
 
-39. 可以通过什么途径查看一个网站所使用的技术
+34. react的核心是什么
 
-40. react的核心是什么
+35. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
 
-41. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
+36. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
 
-42. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
+37. 公司要求写代码，用js原生仿照发布者订阅者模式写。
 
-43. 公司要求写代码，用js原生仿照发布者订阅者模式写。
+38. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
 
-44. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+39. 原型链有了解么？
 
-45. 原型链有了解么？
+40. 虚拟DOM说一下？在生命周期里的对应阶段？
 
-46. 虚拟DOM说一下？在生命周期里的对应阶段？
+41. 用的前端组件是什么？
 
-47. 用的前端组件是什么？
+42. 画一下项目的界面结构并且简单介绍下项目
 
-48. 画一下项目的界面结构并且简单介绍下项目
+43. 问了一下通讯录界面的布局
 
-49. 问了一下通讯录界面的布局
+44. 验证码有写过没
 
-50. 验证码有写过没
+45. npm有学过除简单命令之外的服务构建么？
 
-51. npm有学过除简单命令之外的服务构建么？
+46. 说一下webpack的配置问题
 
-52. 说一下webpack的配置问题
+47. echarts有用过么？WebGL知道么？
 
-53. echarts有用过么？WebGL知道么？
+48. 数据结构了解多少？数据库呢？
 
-54. 数据结构了解多少？数据库呢？
+49. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
 
-55. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+50. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
 
-56. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+51. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
 
-57. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+52. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
 
-58. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+53. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
 
-59. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+54. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
 
-60. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+55. http与https
 
-61. http与https
+56. 画一个三角形
 
-62. 画一个三角形
+57. 实现0.5px横线
 
-63. 实现0.5px横线
-
-64. rem 与em
+58. rem 与em
 
     rem相对于根节点。em相对于父元素
 
-65. 盒子模型height
+59. 盒子模型height
 
-66. 定时器一秒加一次
+60. 定时器一秒加一次
 
-67. 滚动条
+61. 滚动条
 
-68. Webscoket（解决痛点）
+62. Webscoket（解决痛点）
 
